# BK_Build

./: .gitignore  2025_PAPER_TRADING_GUIDE.md  BALL_KNOWER_SPEC.md  BALL_KNOWER_V2_RESULTS.md  BUG_REPORT_ATS_SIMULATION.md  BUG_REPORT_V1_0_SIGN_BUG.md  DATA_SETUP_GUIDE.md  DATA_SOURCES.md  FEATURE_TIERS.md  FIRST_PRINCIPLES_REVIEW.md  MERGE_READINESS_V1_2.md  MERGE_VALIDATION_CHECKLIST.md  MIGRATION_GUIDE.md  NFL_PREDICTIVE_MODELING_GUIDE.md  PAPER_TRADING_TRACKER.md  PHASE1_FINDINGS_REPORT.md  PHASE_6_ANALYSIS.md  PHASE_7_NOTES.md  POST_V1.2_ROADMAP.md  PREDICTIONTRACKER_BENCHMARKS.md  PREDICTIONTRACKER_V1_2_UPGRADE.md  PROJECT_STATUS_REPORT.md  PROVIDER_DEPENDENCIES.md  README.md  REBUILD_ROADMAP.md  STEP_2_ASSESSMENT.md  V2_PROGRESS_REPORT.md  WEEK_11_DIAGNOSTIC_REPORT.md  WEEK_11_ISSUES_ANALYSIS.md  aggregate_ngs_data.py  aggregate_pbp_to_team_stats.py  analyze_high_edge_strategy.py  analyze_nfelo_features.py  analyze_v2_0_results.py  analyze_week11_results.py  backtest_phase2_models.py  backtest_v1_2.py  ball_knower_FINAL_production.py  ball_knower_v1_1.py  ball_knower_v1_2.py  (+90 more)
archive/: README.md  backtest_v1_0.py  ball_knower_v1_final.py  bk_v1_1_with_adjustments.py  bk_v1_final.py  calibrate_model.py  calibrate_regression.py  enhanced_analysis_demo.py  explore_nflreadpy.py  predict_current_week.py  run_demo.py
ball_knower/: __init__.py  config.py
config/: team_name_map_fpd.csv
data/: EPA Tiers-export-2025-11-20.csv  Team Season Power Ratings-export-2025-11-20.csv  _data_dictionary_v2.csv  _feature_catalog_raw.csv  _feature_set_verification.txt  (+10 more)
(+313 files in other folders)
