[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ball-knower"
version = "1.3.0"
description = "NFL prediction system combining Elo ratings, EPA metrics, and machine learning"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Ball Knower Team"}
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ball_knower*", "src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv"]
